--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -1,4 +1,8 @@
 @import 'normalize';
 @import 'global';
 @import 'navbar';
-@import 'hero'
+@import 'hero';
+@import 'services';
+@import 'feature';
+@import 'footer';
+@import 'form'
