--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -27,7 +27,10 @@
   width: 50%;
   height: 100%;
   flex: 0 auto;
+  border-radius: 24px;
 }
+
+//Chevron
 
 .chevron {
   position: absolute;
@@ -42,8 +45,8 @@
 }
 
 .chevron-image {
-  transform: rotate(90deg);
-  animation: MoveUpDown 1.2s linear infinite;
+  transform: scale(0.7);
+  animation: MoveUpDown 1.4s linear infinite;
   position: relative;
 }
 
@@ -54,4 +57,57 @@
   50% {
     bottom: 8px;
   }
+}
+
+//Social Icons
+.social-icons-container {
+  display: flex;
+  .social-icon-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border: 1px solid #e4e4e4;
+  border-radius: 12px;
+  margin: 0 5px;
+  &.linkedin img {
+    transform: scale(0.6);
+  }
+  &:first-child {
+  margin-left: 0px;
+  }
+}
+
+}
+
+@media (max-width: 991px) {
+  .hero {
+    height: auto;
+    padding: 64px 20px 40px 16px;
+  }
+  .hero-text-split {
+    padding: 24px 32px 100px 8px;
+  }
+  .hero-image-split {
+  width: 50%;
+  height: auto;
+  }
+  .chevron {
+    display: none;
+  }
+}
+
+@media (max-width: 479px) {
+  .hero {
+    flex-direction: column;
+  }
+  .hero-text-split {
+    padding: 24px 32px 100px 8px;
+  }
+  .hero-image-split {
+  width: 100%;
+  height: 240px;
+  order: -1;
+}
 }
