--- a/styles/scss/_navbar.scss
+++ b/styles/scss/_navbar.scss
@@ -20,25 +20,22 @@ nav {
     justify-content: center;
     li {
       padding: 8px 14px;
-      transition: all 0.6s;
     }
-    li:hover, li:focus {
-      // background-color: #f5f5f5;
-      background-color: #f5f5f5;
-      border-radius: 7px;
-
+    a {
+      padding-bottom: 3px;
     }
   }
 }
-
 nav label,
 nav #toggle {
     display: none;
 }
 
-@media (max-width: 768px) {  
+@media (max-width: 991px) {  
   nav {
-    .wrapper {
+    padding: 0px;
+    .nav-container {
+      height: 64px;
       align-items: center;
     }
     ul {
@@ -76,3 +73,4 @@ nav #toggle {
     }
   }
 }   
+
