--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -2,7 +2,12 @@
 @import 'global';
 @import 'navbar';
 @import 'hero';
-@import 'services';
+@import 'cards';
 @import 'feature';
 @import 'footer';
-@import 'form'
+@import 'missionstatement';
+@import 'form';
+@import 'small-section';
+@import 'slider';
+@import 'contact';
+@import 'map';
