--- a/styles/scss/_feature.scss
+++ b/styles/scss/_feature.scss
@@ -4,9 +4,9 @@
 }
 
 .side-content {
-  width: 33.3%;
+  width: 66.66%;
   padding: 32px 15px;
-  margin: 0 8.33%;
+  margin: 0 3.33%;
 }
 
 .side-media {
@@ -17,7 +17,6 @@
   align-self: center;
 
   .frame {
-    // box-shadow: 0 0 0 8px $primaryAccent;
     background-color: #008083;
     border-radius: 40px;
     transform: translate(30px, -30px);
@@ -36,42 +35,35 @@
 }
 
 @media (max-width: 991px) {
+  .feature-container {
+    flex-direction: column;
+  }
   .side-content {
-    width: 44%;
-    margin: 0px 24px;
-    padding: 0 8px;
+    width: 100%;
+    padding: 50px 24px 0;
+  //   padding: 0 8px;
   }
   .side-media {
-    width: 41.66%;
-    margin: 0 32px;
+    margin: 0 24px;
     padding: 20px 24px 0;
+    order: -1;
     .frame {
       border-radius: 28px;
       transform: translate(20px, -20px);
-    &.flip {
-    transform: translate(-20px, 20px);
-    }
-    }
+      &.flip {
+      transform: translate(-20px, 20px);
+        }
+      }
     img {
       transform: translate(-20px, 20px);
       &.flip {
       transform: translate(20px, -20px);
-    }
+      }
     }
   }
 }
 
-@media (max-width: 767px) {
-  .side-media {
-    width: 50%;
-    margin: 0 24px;
-    padding: 20px 24px 0;
-  }
-}
 @media (max-width: 480px) {
-  .feature-container {
-    flex-direction: column;
-  }
   .side-content {
     padding: 32px 24px;
     width: 100%;
@@ -79,6 +71,5 @@
   }
   .side-media {
     width: 100%;
-    order: -1;
   }
 }
