--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -3,18 +3,21 @@ footer {
     background-color: #005F60;
     color: whitesmoke;
   .footer-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 40px;
+    justify-items: center;
+    align-items: center;
   }
   li {
     margin: 10px 0;
   }
-  .nav-link {
-    color: whitesmoke;
-    padding-bottom: 3px;      
-    background-image: linear-gradient($primaryAccent, $primaryAccent);
-  }
-  h4 {
+  h3 {
     margin-bottom: 10px;
+  }
+  p {
+    line-height: 22px;
   }
   ul {
     display: flex;
@@ -28,9 +31,6 @@ footer {
     padding: 20px 0;
   }
   input {
-    width: 100%;
-    padding: 10px 0;
-    margin-right: 5px;
     border-radius: 5px 5px 0 0;
   }
   button {
@@ -40,25 +40,48 @@ footer {
     color: #fff;
     border: none;
     text-transform: uppercase;
-    font-weight: 00;
     letter-spacing: 1px;
     border-radius: 0 0 5px 5px;
   }
 }
 
 .textContainer {
-    width: calc(100% * (1 / 4));
-    margin: 0 20px;
+    width: 100%;
 }
 
 .copyright {
-    color: #fff;
-    background-color: #231F1F;
-    border-top: 2px solid #000;
-    border-bottom: 2px solid #000;
-h4 {
+  background-color: #005F60;
+  border-top: 1px solid $smokeGrey;
+  color: $smokeGrey;
+  h4 {
     padding: 20px 0px;
     margin-bottom: 0;
     transform: scale(1, 1)
+  }
+}
+
+@media (max-width: 991px) {
+    footer {
+      padding: 40px 20px;
+    .footer-container {
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+  }
+}
+
+@media (max-width: 568px) {
+  footer {
+  padding: 40px 20px;
+    .footer-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr;
+      gap: 10px;
+    }
+  }
+  .copyright {
+    h4 {
+      padding: 20px; 
+    }
   }
 }
