--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -22,13 +22,14 @@
 
 .hero-image-split {
   background-size: cover;
-  background-position: 70% 0%;
-  background-image: url('/assets/hero-image.jpeg');
+  background-position: 60% 0%;
+  background-image: url(../assets/hero-image1.jpeg);
   width: 50%;
   height: 100%;
   flex: 0 auto;
   border-radius: 24px;
 }
+
 
 //Chevron
 
@@ -59,27 +60,25 @@
   }
 }
 
-//Social Icons
-.social-icons-container {
-  display: flex;
-  .social-icon-box {
-  display: flex;
-  align-items: center;
+//About/Contact Page
+.banner {
   justify-content: center;
-  width: 48px;
-  height: 48px;
-  border: 1px solid #e4e4e4;
-  border-radius: 12px;
-  margin: 0 5px;
-  &.linkedin img {
-    transform: scale(0.6);
-  }
-  &:first-child {
-  margin-left: 0px;
-  }
+  align-items: center;
+  min-height: 480px;
+  height: auto;
+  background-size: cover;
+  background-image: linear-gradient( rgba(17, 17, 17, 0.6)), url(../assets/banner-1.jpg);
+  background-position: top center;
+  color: $whiteSmoke;
 }
 
+.hero-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 
 @media (max-width: 991px) {
   .hero {
@@ -90,8 +89,8 @@
     padding: 24px 32px 100px 8px;
   }
   .hero-image-split {
-  width: 50%;
-  height: auto;
+    width: 50%;
+    height: auto;
   }
   .chevron {
     display: none;
@@ -103,11 +102,11 @@
     flex-direction: column;
   }
   .hero-text-split {
-    padding: 24px 32px 100px 8px;
+    padding: 24px 32px 0px 8px;
   }
   .hero-image-split {
-  width: 100%;
-  height: 240px;
-  order: -1;
-}
+    width: 100%;
+    height: 240px;
+    order: -1;
+  }
 }
