--- a/styles/scss/_navbar.scss
+++ b/styles/scss/_navbar.scss
@@ -9,9 +9,6 @@ nav {
     height: 80px;
   }
   .logo {
-    display: flex;
-    align-items: center;
-    position: relative;
     margin: 0 20px;
   }
   ul {
@@ -38,17 +35,20 @@ nav #toggle {
       height: 64px;
       align-items: center;
     }
+    .logo {
+    margin: 0 10px;
+    }
     ul {
     display: block;
-		background-color: rgba(255, 255, 255, 0.95);
+		background-color: rgba(255, 255, 255, 1);
 		position: fixed;
 		z-index: 10;
 		width: 100%;
-		top: 78px;
+		top: 64px;
 		right: 0;
 		height: 100%;
 		right: -100%;
-        transition: all .5s ease-in; 
+    transition: all .5s ease-in; 
     a {
       width: 100%;
       display: inline-block;
