final code ready to deploy

--- a/styles/scss/_hero.scss
+++ b/styles/scss/_hero.scss
@@ -72,6 +72,17 @@
   color: $whiteSmoke;
 }
 
+.banner-2 {
+  justify-content: center;
+  align-items: center;
+  min-height: 680px;
+  height: auto;
+  background-size: cover;
+  background-image: linear-gradient( rgba(17, 17, 17, 0.6)), url(../assets/banner-2.jpg);
+  background-position: center;
+  color: $whiteSmoke;
+}
+
 .hero-container {
   display: flex;
   flex-direction: column;
